--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div class="player-info">
                             <h2>Neymar Jr</h2>
                             <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian
-                                professional footballer.
+                                professional footballer.. He is widely regarded as one of the best players in the world.
                             </p>
                         </div>
                     </div>
@@ -53,9 +53,9 @@
                             <img src="images/players/player-2.png" alt="">
                         </div>
                         <div class="player-info">
-                            <h2>Neymar Jr</h2>
-                            <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian
-                                professional footballer.
+                            <h2>Lionel Messi</h2>
+                            <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an
+                                attacking midfielder and captains the Argentina national team.
                             </p>
                         </div>
                     </div>
@@ -64,9 +64,10 @@
                             <img src="images/players/player-3.png" alt="">
                         </div>
                         <div class="player-info">
-                            <h2>Neymar Jr</h2>
-                            <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian
-                                professional footballer.
+                            <h2>Cristiano Ronaldo</h2>
+                            <p>NCristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer
+                                who plays as a forward for Serie A club Juventus and captains the Portugal national
+                                team.
                             </p>
                         </div>
                     </div>
@@ -75,9 +76,9 @@
                             <img src="images/players/player-4.png" alt="">
                         </div>
                         <div class="player-info">
-                            <h2>Neymar Jr</h2>
-                            <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian
-                                professional footballer.
+                            <h2>Paulo Dybala</h2>
+                            <p>Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for
+                                Serie A club Juventus and the Argentina national team.
                             </p>
                         </div>
                     </div>
@@ -86,9 +87,9 @@
                             <img src="images/players/player-5.png" alt="">
                         </div>
                         <div class="player-info">
-                            <h2>Neymar Jr</h2>
-                            <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian
-                                professional footballer.
+                            <h2>Mesut Ozil </h2>
+                            <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder for
+                                Süper Lig club Fenerbahçe. Nicknamed "The Assist King"
                             </p>
                         </div>
                     </div>
@@ -97,9 +98,9 @@
                             <img src="images/players/player-6.png" alt="">
                         </div>
                         <div class="player-info">
-                            <h2>Neymar Jr</h2>
-                            <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian
-                                professional footballer.
+                            <h2>Mauro Icardi </h2>
+                            <p>Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for
+                                Ligue 1 club Paris Saint-Germain and the Argentina national team.
                             </p>
                         </div>
                     </div>
@@ -108,9 +109,9 @@
                             <img src="images/players/player-7.png" alt="">
                         </div>
                         <div class="player-info">
-                            <h2>Neymar Jr</h2>
-                            <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian
-                                professional footballer.
+                            <h2>Di Maria</h2>
+                            <p>Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club
+                                Paris Saint-Germain and the Argentina national team.
                             </p>
                         </div>
                     </div>
@@ -119,9 +120,9 @@
                             <img src="images/players/player-8.png" alt="">
                         </div>
                         <div class="player-info">
-                            <h2>Neymar Jr</h2>
-                            <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian
-                                professional footballer.
+                            <h2>Kylian Mbappé</h2>
+                            <p>Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue
+                                1 club Paris Saint-Germain and the France national team.
                             </p>
                         </div>
                     </div>
@@ -130,9 +131,9 @@
                             <img src="images/players/player-9.png" alt="">
                         </div>
                         <div class="player-info">
-                            <h2>Neymar Jr</h2>
-                            <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian
-                                professional footballer.
+                            <h2>Mohamed Salah</h2>
+                            <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a
+                                forward for Premier League club Liverpool and captains the Egypt national team.
                             </p>
                         </div>
                     </div>
@@ -141,9 +142,9 @@
                             <img src="images/players/player-10.png" alt="">
                         </div>
                         <div class="player-info">
-                            <h2>Neymar Jr</h2>
-                            <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian
-                                professional footballer.
+                            <h2>Harry Kane</h2>
+                            <p>Harry Edward Kane MBE is an English professional footballer who plays as a striker for
+                                Premier League club Tottenham Hotspur and captains the England national team.
                             </p>
                         </div>
                     </div>
@@ -152,9 +153,10 @@
                             <img src="images/players/player-11.png" alt="">
                         </div>
                         <div class="player-info">
-                            <h2>Neymar Jr</h2>
-                            <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian
-                                professional footballer.
+                            <h2>Kevin De Bruyne</h2>
+                            <p>Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for
+                                Premier League club Manchester City, where he is vice-captain, and the Belgium national
+                                team.
                             </p>
                         </div>
                     </div>
@@ -163,9 +165,9 @@
                             <img src="images/players/player-12.png" alt="">
                         </div>
                         <div class="player-info">
-                            <h2>Neymar Jr</h2>
-                            <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian
-                                professional footballer.
+                            <h2>Philippe Coutinho</h2>
+                            <p>Philippe Coutinho Correia is a Brazilian professional footballer who plays as an
+                                attacking midfielder or winger for Spanish club Barcelona and the Brazil national team.
                             </p>
                         </div>
                     </div>
@@ -175,10 +177,66 @@
 
         </section>
 
+        <!-- logo section  -->
+
+        <section class="logo">
+            <div class="logo-img">
+                <img src="images/Logo.png" alt="">
+            </div>
+        </section>
 
 
+        <!-- Teams section  -->
+        <section class="team-info">
+            <h1>Teams</h1>
+            <div class="teams">
+                <div class="team">
+                    <div class="individual-team">
+                        <img src="images/teams/argentina.png" alt="">
+                    </div>
+                    <div class="individual-team">
+                        <img src="images/teams/bolivia.png" alt="">
+                    </div>
+                    <div class="individual-team">
+                        <img src="images/teams/brasil.png" alt="">
+                    </div>
+                    <div class="individual-team">
+                        <img src="images/teams/chile.png" alt="">
+                    </div>
+                    <div class="individual-team">
+                        <img src="images/teams/colombia.png" alt="">
+                    </div>
+                    <div class="individual-team">
+                        <img src="images/teams/ecuador.png" alt="">
+                    </div>
+                    <div class="individual-team">
+                        <img src="images/teams/paraguay.png" alt="">
+                    </div>
+                    <div class="individual-team">
+                        <img src="images/teams/peru.png" alt="">
+                    </div>
+                    <div class="individual-team">
+                        <img src="images/teams/uruguay.png" alt="">
+                    </div>
+                    <div class="individual-team">
+                        <img src="images/teams/venezuela.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+
+    <!-- footer section  -->
+    <footer>
+        <div class="social-media">
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-dribbble"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-youtube"></i>
+            <p>Copyright &copy 2022 Football</p>
+        </div>
+
+    </footer>
 </body>
 
 </html>
