--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                         Copa America <br>
                         2021
                     </h1>
-                    <a href="">Watch Live &nbsp <i class="fas fa-arrow-right"></i></a>
+                    <a target="_blank" href="https://elevensports.com/en/">Watch Live &nbsp <i
+                            class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="banner-img">
                     <img src="images/banner.png" alt="">
@@ -177,13 +178,7 @@
 
         </section>
 
-        <!-- logo section  -->
 
-        <section class="logo">
-            <div class="logo-img">
-                <img src="images/Logo.png" alt="">
-            </div>
-        </section>
 
 
         <!-- Teams section  -->
@@ -193,46 +188,147 @@
                 <div class="team">
                     <div class="individual-team">
                         <img src="images/teams/argentina.png" alt="">
+                        <div class="about">
+                            <a target="_blank" href="https://copaamerica.com/en/teams/argentina/">
+                                Read More <i class="fas fa-arrow-right"></i>
+                            </a>
+                        </div>
+
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/bolivia.png" alt="">
+                        <div class="about">
+                            <a target="_blank" href="https://copaamerica.com/en/teams/bolivia/">
+                                Read More <i class="fas fa-arrow-right"></i>
+                            </a>
+                        </div>
+
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/brasil.png" alt="">
+                        <div class="about">
+                            <a target="_blank" href="https://copaamerica.com/en/teams/brasil/">Read More <i
+                                    class="fas fa-arrow-right"></i></a>
+                        </div>
+
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/chile.png" alt="">
+                        <div class="about">
+                            <a target="_blank" href="https://copaamerica.com/en/teams/chile/">
+                                Read More <i class="fas fa-arrow-right"></i>
+                            </a>
+                        </div>
+
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/colombia.png" alt="">
+                        <div class="about">
+                            <a target="_blank" href="https://copaamerica.com/en/teams/colombia/">
+                                Read More <i class="fas fa-arrow-right"></i>
+                            </a>
+                        </div>
+
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/ecuador.png" alt="">
+                        <div class="about">
+                            <a target="_blank" href="https://copaamerica.com/en/teams/ecuador/">
+                                Read More <i class="fas fa-arrow-right"></i>
+                            </a>
+                        </div>
+
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/paraguay.png" alt="">
+                        <div class="about">
+                            <a target="_blank" href="https://copaamerica.com/en/teams/paraguay/">
+                                Read More <i class="fas fa-arrow-right"></i>
+                            </a>
+                        </div>
+
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/peru.png" alt="">
+                        <div class="about">
+                            <a target="_blank" href="https://copaamerica.com/en/teams/peru/">
+                                Read More <i class="fas fa-arrow-right"></i>
+                            </a>
+                        </div>
+
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/uruguay.png" alt="">
+                        <div class="about">
+                            <a target="_blank" href="https://copaamerica.com/en/teams/uruguay/">
+                                Read More <i class="fas fa-arrow-right"></i>
+                            </a>
+                        </div>
+
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/venezuela.png" alt="">
+                        <div class="about">
+                            <a target="_blank" href="https://copaamerica.com/en/teams/venezuela/">
+                                Read More <i class="fas fa-arrow-right"></i>
+                            </a>
+
+                        </div>
+
                     </div>
                 </div>
             </div>
         </section>
-    </main>
+        <!-- gallery start  -->
+        <section class="gallery">
+            <h1>Gallery</h1>
+            <div class="photos">
+                <div class="photo">
+                    <img src="images/gallery/gallery-1.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="images/gallery/gallery-2.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="images/gallery/gallery-3.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="images/gallery/gallery-4.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="images/gallery/gallery-5.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="images/gallery/gallery-6.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="images/gallery/gallery-7.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="images/gallery/gallery-11.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="images/gallery/gallery-09.jpg" alt="">
+                </div>
+            </div>
 
+        </section>
+        <!-- logo section  -->
+
+        <section class="logo">
+            <div class="logo-img">
+                <img src="images/Logo.png" alt="">
+            </div>
+        </section>
+
+    </main>
     <!-- footer section  -->
     <footer>
         <div class="social-media">
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-dribbble"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-youtube"></i>
+            <a target="_blank" href="https://en.wikipedia.org/wiki/Instagram"><i class="fab fa-instagram"></i></a>
+            <a target="_blank" href="https://en.wikipedia.org/wiki/Dribbble"><i class="fab fa-dribbble"></i></a>
+            <a target="_blank" href="https://en.wikipedia.org/wiki/Twitter"><i class="fab fa-twitter"></i></a>
+            <a target="_blank" href="https://en.wikipedia.org/wiki/YouTube"><i class="fab fa-youtube"></i></a>
             <p>Copyright &copy 2022 Football</p>
         </div>
 
