--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
     <script src="https://kit.fontawesome.com/eadc25509e.js" crossorigin="anonymous"></script>
     <!-- CSS styles -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Football</title>
+    <title>Copa America -2021</title>
 </head>
 
 <body>
-    <header></header>
     <main>
         <!-- banner section start  -->
         <section class="banner">
-
             <div class="banner-section">
                 <div class="banner-tag">
                     <h1>Conmebol <br>
@@ -31,8 +29,8 @@
                     <img src="images/banner.png" alt="">
                 </div>
             </div>
-
         </section>
+        <!-- banner section end  -->
 
         <!-- Players section start -->
         <section>
@@ -172,16 +170,12 @@
                             </p>
                         </div>
                     </div>
-
                 </div>
             </div>
-
         </section>
+        <!-- Players section end -->
 
-
-
-
-        <!-- Teams section  -->
+        <!-- Teams section start  -->
         <section class="team-info">
             <h1>Teams</h1>
             <div class="teams">
@@ -193,7 +187,6 @@
                                 Read More <i class="fas fa-arrow-right"></i>
                             </a>
                         </div>
-
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/bolivia.png" alt="">
@@ -202,7 +195,6 @@
                                 Read More <i class="fas fa-arrow-right"></i>
                             </a>
                         </div>
-
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/brasil.png" alt="">
@@ -210,7 +202,6 @@
                             <a target="_blank" href="https://copaamerica.com/en/teams/brasil/">Read More <i
                                     class="fas fa-arrow-right"></i></a>
                         </div>
-
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/chile.png" alt="">
@@ -219,7 +210,6 @@
                                 Read More <i class="fas fa-arrow-right"></i>
                             </a>
                         </div>
-
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/colombia.png" alt="">
@@ -228,7 +218,6 @@
                                 Read More <i class="fas fa-arrow-right"></i>
                             </a>
                         </div>
-
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/ecuador.png" alt="">
@@ -237,7 +226,6 @@
                                 Read More <i class="fas fa-arrow-right"></i>
                             </a>
                         </div>
-
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/paraguay.png" alt="">
@@ -246,7 +234,6 @@
                                 Read More <i class="fas fa-arrow-right"></i>
                             </a>
                         </div>
-
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/peru.png" alt="">
@@ -255,7 +242,6 @@
                                 Read More <i class="fas fa-arrow-right"></i>
                             </a>
                         </div>
-
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/uruguay.png" alt="">
@@ -264,7 +250,6 @@
                                 Read More <i class="fas fa-arrow-right"></i>
                             </a>
                         </div>
-
                     </div>
                     <div class="individual-team">
                         <img src="images/teams/venezuela.png" alt="">
@@ -272,13 +257,13 @@
                             <a target="_blank" href="https://copaamerica.com/en/teams/venezuela/">
                                 Read More <i class="fas fa-arrow-right"></i>
                             </a>
-
                         </div>
-
                     </div>
                 </div>
             </div>
         </section>
+        <!-- Teams section end  -->
+
         <!-- gallery start  -->
         <section class="gallery">
             <h1>Gallery</h1>
@@ -311,18 +296,19 @@
                     <img src="images/gallery/gallery-09.jpg" alt="">
                 </div>
             </div>
-
         </section>
-        <!-- logo section  -->
+        <!-- gallery end -->
 
+        <!-- logo section start -->
         <section class="logo">
             <div class="logo-img">
                 <img src="images/Logo.png" alt="">
             </div>
         </section>
-
+        <!-- logo section end -->
     </main>
-    <!-- footer section  -->
+
+    <!-- footer section start -->
     <footer>
         <div class="social-media">
             <a target="_blank" href="https://en.wikipedia.org/wiki/Instagram"><i class="fab fa-instagram"></i></a>
@@ -331,8 +317,8 @@
             <a target="_blank" href="https://en.wikipedia.org/wiki/YouTube"><i class="fab fa-youtube"></i></a>
             <p>Copyright &copy 2022 Football</p>
         </div>
-
     </footer>
+    <!-- footer section end -->
 </body>
 
 </html>
