--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <main>
-        <!-- banner section start  -->
+    <header>
+        <!-- Banner section start  -->
         <section class="banner">
             <div class="banner-section">
                 <div class="banner-tag">
@@ -30,8 +30,10 @@
                 </div>
             </div>
         </section>
-        <!-- banner section end  -->
+        <!-- Banner section end  -->
+    </header>
 
+    <main>
         <!-- Players section start -->
         <section>
             <div class="players">
@@ -175,6 +177,8 @@
         </section>
         <!-- Players section end -->
 
+        <!-- >>>>>>>><<<<<<<<< -->
+
         <!-- Teams section start  -->
         <section class="team-info">
             <h1>Teams</h1>
@@ -264,6 +268,8 @@
         </section>
         <!-- Teams section end  -->
 
+        <!-- >>>>>>>><<<<<<<<< -->
+
         <!-- gallery start  -->
         <section class="gallery">
             <h1>Gallery</h1>
@@ -299,6 +305,8 @@
         </section>
         <!-- gallery end -->
 
+        <!-- >>>>>>>><<<<<<<<< -->
+
         <!-- logo section start -->
         <section class="logo">
             <div class="logo-img">
@@ -307,6 +315,8 @@
         </section>
         <!-- logo section end -->
     </main>
+
+    <!-- >>>>>>>><<<<<<<<< -->
 
     <!-- footer section start -->
     <footer>
